@@ -1,7 +1,7 @@
 /*
  * cccs.cpp - cccs class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: cccs.cpp,v 1.3 2004/01/28 18:19:07 ela Exp $
+ * $Id: cccs.cpp,v 1.4 2004/01/30 21:40:35 ela Exp $
  *
  */
 
@@ -45,6 +45,7 @@
 
 cccs::cccs () : circuit (4) {
   type = CIR_CCCS;
+  setVoltageSources (1);
 }
 
 void cccs::calcS (nr_double_t frequency) {
@@ -75,8 +76,8 @@ void cccs::calcS (nr_double_t frequency) {
 
 void cccs::calcY (void) {
   nr_double_t g = getPropertyDouble ("G");
-  setC (1, +1.0); setC (2, +0.0); setC (3, +0.0); setC (4, -1.0);
-  setB (1, -1/g); setB (2, +1.0); setB (3, -1.0); setB (4, +1/g);
-  setD (0);
-  setE (0);
+  setC (1, 1, +1.0); setC (1, 2, +0.0); setC (1, 3, +0.0); setC (1, 4, -1.0);
+  setB (1, 1, -1/g); setB (1, 2, +1.0); setB (1, 3, -1.0); setB (1, 4, +1/g);
+  setD (1, 0.0);
+  setE (1, 0.0);
 }
