@@ -1,7 +1,7 @@
 /*
  * ccvs.cpp - ccvs class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: ccvs.cpp,v 1.2 2003/12/26 14:04:07 ela Exp $
+ * $Id: ccvs.cpp,v 1.3 2004/01/30 21:40:35 ela Exp $
  *
  */
 
@@ -45,6 +45,7 @@
 
 ccvs::ccvs () : circuit (4) {
   type = CIR_CCVS;
+  setVoltageSources (2);
 }
 
 void ccvs::calcS (nr_double_t frequency) {
@@ -71,4 +72,15 @@ void ccvs::calcS (nr_double_t frequency) {
   setS (4, 2, 0.0);
   setS (4, 3, 0.0);
   setS (4, 4, 0.0);
+}
+
+void ccvs::calcY (void) {
+  setB (1, 1, -1.0); setB (1, 2, +0.0); setB (1, 3, +0.0); setB (1, 4, +1.0); 
+  setB (2, 1, +0.0); setB (2, 2, -1.0); setB (2, 3, +1.0); setB (2, 4, +0.0); 
+  setC (1, 1, +0.0); setC (1, 2, +1.0); setC (1, 3, -1.0); setC (1, 4, +0.0); 
+  setC (2, 1, +1.0); setC (2, 2, +0.0); setC (2, 3, +0.0); setC (2, 4, -1.0); 
+  setD (1, - getPropertyDouble ("G"));
+  setD (2, 0.0);
+  setE (1, 0.0);
+  setE (2, 0.0);
 }
