@@ -1,7 +1,7 @@
 /*
  * strafo.h - symmetrical trafo class definitions
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: strafo.h,v 1.2 2003/12/26 14:04:07 ela Exp $
+ * $Id: strafo.h,v 1.3 2004/01/30 21:40:35 ela Exp $
  *
  */
 
@@ -30,6 +30,7 @@ class strafo : public circuit
  public:
   strafo ();
   void calcS (nr_double_t);
+  void calcY (void);
 };
 
 #endif /* __STRAFO_H__ */
