@@ -1,7 +1,7 @@
 /*
  * vdc.cpp - DC voltage source class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: vdc.cpp,v 1.3 2004/01/28 18:19:07 ela Exp $
+ * $Id: vdc.cpp,v 1.4 2004/01/30 21:40:35 ela Exp $
  *
  */
 
@@ -42,11 +42,12 @@ vdc::vdc () : circuit (2) {
   setS (2, 1, 1.0);
   setS (2, 2, 0.0);
   type = CIR_VDC;
+  setVoltageSources (1);
 }
 
 void vdc::calcY (void) {
-  setC (1, +1.0); setC (2, -1.0);
-  setB (1, +1.0); setB (2, -1.0);
-  setE (getPropertyDouble ("U"));
-  setD (0.0);
+  setC (1, 1, +1.0); setC (1, 2, -1.0);
+  setB (1, 1, +1.0); setB (1, 2, -1.0);
+  setE (1, getPropertyDouble ("U"));
+  setD (1, 0.0);
 }
