@@ -1,3 +1,8 @@
+2004-01-30  Stefan Jahn  <stefan@lkcc.org>
+
+	* ccvs.cpp, strafo.cpp, trafo.cpp: Implemented MNA matrix 
+	values for DC simulation.
+
 2004-01-28  Stefan Jahn  <stefan@lkcc.org>
 
 	* cccs.cpp, idc.cpp, vccs.cpp, vcvs.cpp, vdc.cpp: Applied
